--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
 
+    /* ===== NEU: 12 enger (ca. -3px) ===== */
+    .slot .num > span.num12 .d + .d{ margin-left: -3px; }
+
     .slot .num > span.dot::after{
       content:"";
       position:absolute;
@@ -545,7 +548,7 @@
 
     function clearSpan(span){
       if(!span) return;
-      span.classList.remove("dot","num10","num11");
+      span.classList.remove("dot","num10","num11","num12"); /* <-- NEU */
       span.innerHTML = "";
       span.textContent = "";
       span.removeAttribute("data-val");
@@ -557,7 +560,7 @@
         return;
       }
 
-      span.classList.remove("num10","num11");
+      span.classList.remove("num10","num11","num12"); /* <-- NEU */
       span.innerHTML = "";
       span.dataset.val = String(n);
 
@@ -571,6 +574,13 @@
         span.innerHTML = `<span class="d">1</span><span class="d">1</span>`;
         return;
       }
+      /* ===== NEU: 12 als 2-stellig rendern ===== */
+      if (n === 12){
+        span.classList.add("num12");
+        span.innerHTML = `<span class="d">1</span><span class="d">2</span>`;
+        return;
+      }
+
       span.textContent = String(n);
     }
 
@@ -643,10 +653,6 @@
     // =========================================================
     function mapHiddenToVisible_CW(face){
       const [f1,f2,f3,f4] = face;
-      // Damit am Achsenrand die Paare stimmen:
-      // vorher F1 liegt unter/neben neuer F4
-      // vorher F2 liegt unter/neben neuer F3
-      // => auftauchende Fläche braucht Slot-Permutation
       return [f4, f3, f2, f1];
     }
 
@@ -677,8 +683,7 @@
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      // links: erst auftauchende Fläche
-      // FIX: NUR bei CW Projection-Mapping anwenden
+      // links: erst auftauchende Fläche (nur bei CW gemappt)
       const nextForPreview = (plannedDir === +1) ? mapHiddenToVisible_CW(next) : next;
 
       for(let i=0;i<4;i++){
