Chat 2 zuvor: passte alles. Jetzt: UI Prototype.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KIPP – Rotation perfekt + KIP-Gruppe korrekt</title>
+  <title>DigiKipp – Prototype UI + Golden Logic</title>
 
   <style>
     :root{
@@ -35,6 +35,9 @@
       --btn-bg: #ead7be;
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
+
+      --ui-panel-bg: rgba(234, 215, 190, 0.90);
+      --ui-panel-border: rgba(0,0,0,0.35);
 
       --rotSign: 1;
       --rot: 0deg;
@@ -71,7 +74,7 @@
 
     .stage{
       width: min(94vw, 680px);
-      margin-top: 14vh;
+      margin-top: 8vh;
       display:flex;
       flex-direction: column;
       gap: 14px;
@@ -79,6 +82,29 @@
       align-items:center;
     }
 
+    /* ========= UI TOP ========= */
+    .title{
+      width: 100%;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      margin-bottom: 2px;
+      user-select:none;
+    }
+    .title h1{
+      margin: 0;
+      padding: 0;
+      font-weight: 1000;
+      letter-spacing: 0.06em;
+      text-transform: none;
+      font-size: clamp(18px, 4.6vmin, 34px);
+      color: rgba(0,0,0,0.92);
+      text-shadow:
+        0 1px 0 rgba(255,255,255,0.35),
+        0 10px 18px rgba(0,0,0,0.25);
+    }
+
+    /* ========= Board ========= */
     .board{
       position:relative;
       width: 100%;
@@ -288,7 +314,7 @@
     .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
     .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
 
-    /* ===== NEU: 12 enger (ca. -3px) ===== */
+    /* ===== 12 enger (ca. -3px) ===== */
     .slot .num > span.num12 .d + .d{ margin-left: -3px; }
 
     .slot .num > span.dot::after{
@@ -396,14 +422,190 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
+    /* ========= UI PANEL (unter der Box) ========= */
+    .uiPanel{
+      width: 100%;
+      box-sizing: border-box;
+      padding: 12px 12px 10px;
+      border-radius: 16px;
+      border: 1px solid var(--ui-panel-border);
+      background: var(--ui-panel-bg);
+      backdrop-filter: blur(6px);
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.22),
+        0 0 0 1px rgba(255,255,255,0.16) inset;
+      display:flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .uiRow{
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .uiLabel{
+      font-weight: 900;
+      letter-spacing: 0.04em;
+      color: rgba(0,0,0,0.85);
+      user-select:none;
+    }
+
+    .mini{
+      font-size: 12px;
+      font-weight: 800;
+      opacity: 0.9;
+    }
+
+    .targetWrap{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+    .targetCard{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+      margin-left: auto;
+    }
+
+    .targetSquare{
+      width: 44px;
+      height: 44px;
+      border-radius: 10px;
+      background: var(--blau);
+      border: 2px solid rgba(0,0,0,0.55);
+      box-shadow:
+        0 6px 12px rgba(0,0,0,0.18),
+        0 0 0 1px rgba(255,255,255,0.18) inset;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight: 1000;
+      font-size: 22px;
+      color: #0b0b0b;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+      user-select:none;
+    }
+
+    .scoreBox{
+      display:flex;
+      align-items:baseline;
+      gap: 10px;
+      width: 100%;
+      justify-content: space-between;
+      user-select:none;
+    }
+
+    .scoreBig{
+      font-size: 22px;
+      font-weight: 1000;
+      letter-spacing: 0.04em;
+      color: rgba(0,0,0,0.88);
+    }
+
+    .scoreRight{
+      text-align:right;
+      display:flex;
+      flex-direction: column;
+      gap: 2px;
+      align-items:flex-end;
+    }
+
+    /* ========= Slider ========= */
+    .sliderRow{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+      user-select:none;
+    }
+
+    .icon{
+      width: 26px;
+      height: 26px;
+      flex: 0 0 auto;
+      opacity: 0.92;
+    }
+    .icon svg{
+      width:100%;
+      height:100%;
+      fill: none;
+      stroke: rgba(0,0,0,0.92);
+      stroke-width: 2.2;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+    }
+
+    input[type="range"]{
+      -webkit-appearance: none;
+      appearance: none;
+      width: 100%;
+      height: 10px;
+      border-radius: 999px;
+      background: rgba(0,0,0,0.18);
+      outline: none;
+      border: 1px solid rgba(0,0,0,0.25);
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.18) inset;
+    }
+    input[type="range"]::-webkit-slider-thumb{
+      -webkit-appearance: none;
+      appearance: none;
+      width: 22px;
+      height: 22px;
+      border-radius: 6px; /* quadratisch-ish */
+      background: #0b0b0b;
+      border: 2px solid rgba(255,255,255,0.22);
+      box-shadow:
+        0 8px 14px rgba(0,0,0,0.25),
+        0 0 0 1px rgba(0,0,0,0.35);
+      cursor: pointer;
+    }
+    input[type="range"]::-moz-range-thumb{
+      width: 22px;
+      height: 22px;
+      border-radius: 6px;
+      background: #0b0b0b;
+      border: 2px solid rgba(255,255,255,0.22);
+      cursor: pointer;
+    }
+
+    .startBtn{
+      width: 100%;
+      border: 1px solid var(--btn-border);
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      font-weight: 1000;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      padding: 14px 16px;
+      border-radius: 14px;
+      cursor: pointer;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.25),
+        0 0 0 1px rgba(255,255,255,0.15) inset;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .startBtn:active{
+      transform: translateY(1px) scale(0.99);
+      filter: brightness(0.97);
+    }
+
+    /* ========= DEV Controls (lassen wir fürs Testen da) ========= */
     .controls{
       width: 100%;
       display:flex;
       justify-content:center;
       gap: 12px;
       padding: 0 6px;
-      margin-top: 18px;
+      margin-top: 6px;
       flex-wrap: wrap;
+      opacity: 0.95;
     }
 
     .btn{
@@ -431,6 +633,13 @@
 
 <body>
   <div class="stage">
+
+    <!-- ===== UI TOP: Titel ===== -->
+    <div class="title" aria-label="Titel">
+      <h1>DigiKipp</h1>
+    </div>
+
+    <!-- ===== Board ===== -->
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
@@ -446,7 +655,6 @@
       </div>
 
       <div id="kipGroup" class="kipGroup" aria-label="KIP Gruppe">
-        <!-- FIX: Alles innen wird skaliert, außen nur rotiert -->
         <div class="kipScale">
           <div class="kipShadow" aria-hidden="true"></div>
           <div class="kipEdgeCore" aria-hidden="true"></div>
@@ -469,12 +677,67 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
+    <!-- ===== UI PANEL (Attrappen / Dummy) ===== -->
+    <div class="uiPanel" aria-label="UI Panel (noch ohne Logik)">
+      <!-- Slider: Turtle / Hare Piktogramme -->
+      <div class="sliderRow" aria-label="Kippspeed">
+        <div class="icon" aria-hidden="true" title="langsam">
+          <!-- Turtle (Outline) -->
+          <svg viewBox="0 0 24 24">
+            <path d="M4 14c0 2 2 3 4 3h5c4 0 7-2 7-5 0-3-3-5-7-5H9"/>
+            <path d="M9 12h5"/>
+            <path d="M6 17v2"/>
+            <path d="M10 17v2"/>
+            <path d="M16 16v2"/>
+            <path d="M20 12h2"/>
+            <path d="M6 11l-2-1"/>
+          </svg>
+        </div>
+
+        <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
+
+        <div class="icon" aria-hidden="true" title="schnell">
+          <!-- Hare (Outline) -->
+          <svg viewBox="0 0 24 24">
+            <path d="M6 14c0 3 3 5 7 5 4 0 7-2 7-5 0-2-2-4-5-4H9c-2 0-3 2-3 4Z"/>
+            <path d="M9 10V6c0-2 2-3 3-3"/>
+            <path d="M12 10l2-6"/>
+            <path d="M7 16l-2 2"/>
+            <path d="M17 16l2 2"/>
+            <path d="M14 13h1"/>
+          </svg>
+        </div>
+      </div>
+
+      <!-- Kippziel -->
+      <div class="uiRow">
+        <div class="uiLabel">Kippziel</div>
+        <div class="targetCard">
+          <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)">7</div>
+        </div>
+      </div>
+
+      <!-- Punkte / Progress / Highscore -->
+      <div class="scoreBox" aria-label="Punkteblock">
+        <div class="scoreBig">Punkte: <span id="scoreVal">0</span></div>
+        <div class="scoreRight">
+          <div class="mini">Ziel: <span id="progressVal">0</span> / 11</div>
+          <div class="mini">Highscore: <span id="hiVal">66</span></div>
+        </div>
+      </div>
+
+      <!-- Start / Neu setzen -->
+      <button id="btnStart" class="startBtn">START</button>
+    </div>
+
+    <!-- ===== DEV Controls (für dich weiterhin zum Testen) ===== -->
     <div class="controls">
       <button id="btnMix" class="btn">Würfel mischen (12)</button>
       <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
       <button id="btnCW" class="btn">KIPP ⟳ (CW)</button>
       <button id="btnCCW" class="btn">KIPP ⟲ (CCW)</button>
     </div>
+
   </div>
 
   <script>
@@ -488,6 +751,18 @@
     const btnKip50  = document.getElementById("btnKip50");
     const btnCW     = document.getElementById("btnCW");
     const btnCCW    = document.getElementById("btnCCW");
+
+    // ===== UI (Dummy, nicht verkabelt) =====
+    const btnStart = document.getElementById("btnStart");
+    const speedSlider = document.getElementById("speedSlider");
+
+    // rein optisch: Buttontext toggeln (ohne irgendeine Spiellogik)
+    let startedOnce = false;
+    btnStart.addEventListener("click", () => {
+      startedOnce = true;
+      btnStart.textContent = "ZAHLEN NEU SETZEN";
+      // Keine Logik hier. Nur Optik.
+    });
 
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
@@ -548,7 +823,7 @@
 
     function clearSpan(span){
       if(!span) return;
-      span.classList.remove("dot","num10","num11","num12"); /* <-- NEU */
+      span.classList.remove("dot","num10","num11","num12");
       span.innerHTML = "";
       span.textContent = "";
       span.removeAttribute("data-val");
@@ -560,7 +835,7 @@
         return;
       }
 
-      span.classList.remove("num10","num11","num12"); /* <-- NEU */
+      span.classList.remove("num10","num11","num12");
       span.innerHTML = "";
       span.dataset.val = String(n);
 
@@ -574,7 +849,6 @@
         span.innerHTML = `<span class="d">1</span><span class="d">1</span>`;
         return;
       }
-      /* ===== NEU: 12 als 2-stellig rendern ===== */
       if (n === 12){
         span.classList.add("num12");
         span.innerHTML = `<span class="d">1</span><span class="d">2</span>`;
@@ -647,8 +921,6 @@
 
     // =========================================================
     // DEIN FELD-ID KERN (CW):
-    // "1→4" und "2→3" entlang der auftauchenden Fläche
-    // Wir ändern NICHTS an den Zahlen selbst, nur die Slot-Projection.
     // Face ist [F1,F2,F3,F4] in 100%-Logik.
     // =========================================================
     function mapHiddenToVisible_CW(face){
