--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DigiKipp – Prototype UI + Golden Logic</title>
+  <title>DigiKipp – Prototype UI (loose elements)</title>
 
   <style>
     :root{
@@ -36,8 +36,11 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      --ui-panel-bg: rgba(234, 215, 190, 0.90);
-      --ui-panel-border: rgba(0,0,0,0.35);
+      /* UI-Farben */
+      --ui-brown: #5f3b2a;      /* dunkelbraun (Regler) */
+      --ui-beige: #ead7be;      /* dein beige */
+      --ui-black: #0b0b0b;
+      --ui-shadow: 0 12px 22px rgba(0,0,0,0.22);
 
       --rotSign: 1;
       --rot: 0deg;
@@ -82,21 +85,18 @@
       align-items:center;
     }
 
-    /* ========= UI TOP ========= */
+    /* ===== Titel ===== */
     .title{
       width: 100%;
       display:flex;
       justify-content:center;
       align-items:center;
-      margin-bottom: 2px;
       user-select:none;
     }
     .title h1{
       margin: 0;
-      padding: 0;
       font-weight: 1000;
       letter-spacing: 0.06em;
-      text-transform: none;
       font-size: clamp(18px, 4.6vmin, 34px);
       color: rgba(0,0,0,0.92);
       text-shadow:
@@ -104,7 +104,7 @@
         0 10px 18px rgba(0,0,0,0.25);
     }
 
-    /* ========= Board ========= */
+    /* ===== Board ===== */
     .board{
       position:relative;
       width: 100%;
@@ -297,7 +297,6 @@
 
       transform: rotate(var(--num-rot, 0deg)) translate(var(--opt-x, 0px), var(--opt-y, 0px));
       transform-origin: 50% 50%;
-
       position: relative;
       line-height: 1;
     }
@@ -311,11 +310,11 @@
     }
 
     .slot .num > span .d{ display:inline-block; line-height: 1; }
-    .slot .num > span.num11 .d + .d{ margin-left: -0.18em; }
-    .slot .num > span.num10 .d + .d{ margin-left: -0.10em; }
 
-    /* ===== 12 enger (ca. -3px) ===== */
-    .slot .num > span.num12 .d + .d{ margin-left: -3px; }
+    /* enger zusammen (Slots) */
+    .slot .num > span.num11 .d + .d{ margin-left: -0.26em; }
+    .slot .num > span.num10 .d + .d{ margin-left: -0.18em; }
+    .slot .num > span.num12 .d + .d{ margin-left: -0.24em; }
 
     .slot .num > span.dot::after{
       content:"";
@@ -341,9 +340,7 @@
     .s-2d{ left: calc(3 * var(--step)); top: calc(1 * var(--step)); }
 
     /* =========================
-       KIP Gruppe (FIX: keine Verzerrung mehr)
-       Außen: nur ROTATION
-       Innen: scaleX(0.5)
+       KIP Gruppe
        ========================= */
     .kipGroup{
       position:absolute;
@@ -422,106 +419,28 @@
     .k-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
     .k-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
 
-    /* ========= UI PANEL (unter der Box) ========= */
-    .uiPanel{
+    /* ========= UI loose (ohne Panel) ========= */
+    .uiLoose{
       width: 100%;
-      box-sizing: border-box;
-      padding: 12px 12px 10px;
-      border-radius: 16px;
-      border: 1px solid var(--ui-panel-border);
-      background: var(--ui-panel-bg);
-      backdrop-filter: blur(6px);
-      box-shadow:
-        0 12px 22px rgba(0,0,0,0.22),
-        0 0 0 1px rgba(255,255,255,0.16) inset;
       display:flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 12px;
+      margin-top: 2px;
     }
 
-    .uiRow{
-      display:flex;
-      align-items:center;
-      justify-content: space-between;
-      gap: 10px;
-    }
-
-    .uiLabel{
-      font-weight: 900;
-      letter-spacing: 0.04em;
-      color: rgba(0,0,0,0.85);
-      user-select:none;
-    }
-
-    .mini{
-      font-size: 12px;
-      font-weight: 800;
-      opacity: 0.9;
-    }
-
-    .targetWrap{
-      display:flex;
-      align-items:center;
-      gap: 10px;
-      justify-content: space-between;
+    /* Slider als dunkelbraune „Nut“ */
+    .sliderStrip{
       width: 100%;
-    }
-
-    .targetCard{
+      padding: 10px 10px;
+      border-radius: 14px;
+      background:
+        linear-gradient(180deg, rgba(255,255,255,0.10), rgba(0,0,0,0.10)),
+        var(--ui-brown);
+      border: 1px solid rgba(0,0,0,0.35);
+      box-shadow: var(--ui-shadow), 0 0 0 1px rgba(255,255,255,0.12) inset;
       display:flex;
       align-items:center;
-      gap: 10px;
-      margin-left: auto;
-    }
-
-    .targetSquare{
-      width: 44px;
-      height: 44px;
-      border-radius: 10px;
-      background: var(--blau);
-      border: 2px solid rgba(0,0,0,0.55);
-      box-shadow:
-        0 6px 12px rgba(0,0,0,0.18),
-        0 0 0 1px rgba(255,255,255,0.18) inset;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight: 1000;
-      font-size: 22px;
-      color: #0b0b0b;
-      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
-      user-select:none;
-    }
-
-    .scoreBox{
-      display:flex;
-      align-items:baseline;
-      gap: 10px;
-      width: 100%;
-      justify-content: space-between;
-      user-select:none;
-    }
-
-    .scoreBig{
-      font-size: 22px;
-      font-weight: 1000;
-      letter-spacing: 0.04em;
-      color: rgba(0,0,0,0.88);
-    }
-
-    .scoreRight{
-      text-align:right;
-      display:flex;
-      flex-direction: column;
-      gap: 2px;
-      align-items:flex-end;
-    }
-
-    /* ========= Slider ========= */
-    .sliderRow{
-      display:flex;
-      align-items:center;
-      gap: 10px;
+      gap: 12px;
       user-select:none;
     }
 
@@ -529,7 +448,7 @@
       width: 26px;
       height: 26px;
       flex: 0 0 auto;
-      opacity: 0.92;
+      opacity: 0.95;
     }
     .icon svg{
       width:100%;
@@ -547,33 +466,111 @@
       width: 100%;
       height: 10px;
       border-radius: 999px;
-      background: rgba(0,0,0,0.18);
+      background: rgba(0,0,0,0.22);
       outline: none;
-      border: 1px solid rgba(0,0,0,0.25);
-      box-shadow: 0 0 0 1px rgba(255,255,255,0.18) inset;
+      border: 1px solid rgba(0,0,0,0.32);
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.10) inset;
     }
     input[type="range"]::-webkit-slider-thumb{
       -webkit-appearance: none;
       appearance: none;
       width: 22px;
       height: 22px;
-      border-radius: 6px; /* quadratisch-ish */
-      background: #0b0b0b;
-      border: 2px solid rgba(255,255,255,0.22);
-      box-shadow:
-        0 8px 14px rgba(0,0,0,0.25),
-        0 0 0 1px rgba(0,0,0,0.35);
+      border-radius: 6px;
+      background: var(--ui-black);
+      border: 2px solid rgba(255,255,255,0.18);
+      box-shadow: 0 8px 14px rgba(0,0,0,0.25), 0 0 0 1px rgba(0,0,0,0.35);
       cursor: pointer;
     }
     input[type="range"]::-moz-range-thumb{
       width: 22px;
       height: 22px;
       border-radius: 6px;
-      background: #0b0b0b;
-      border: 2px solid rgba(255,255,255,0.22);
+      background: var(--ui-black);
+      border: 2px solid rgba(255,255,255,0.18);
       cursor: pointer;
     }
 
+    /* Info-Zeile: links Kippziel+Quadrat, rechts Score/Highscore */
+    .infoRow{
+      width: 100%;
+      display:flex;
+      align-items:flex-start;
+      justify-content: space-between;
+      gap: 14px;
+      user-select:none;
+    }
+
+    .kippBlock{
+      display:flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    .kippHead{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+    }
+
+    .kippLabel{
+      font-weight: 1000;
+      letter-spacing: 0.02em;
+      font-size: clamp(18px, 4.2vmin, 26px);
+      color: rgba(0,0,0,0.92);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+    }
+
+    /* Ziel-Quadrat: ohne Radius, stärkerer Rand (wie Box-Rand / Farbfeld-Trenner) */
+    .targetSquare{
+      width: 52px;
+      height: 52px;
+      border-radius: 0px;                 /* <<< keine Radien */
+      background: var(--blau);
+      border: 4px solid #000;             /* <<< kräftiger Rand */
+      box-shadow: var(--ui-shadow);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight: 1000;
+      font-size: 30px;                    /* <<< Zahl größer */
+      color: #0b0b0b;
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+    }
+
+    .subLine{
+      font-weight: 900;
+      opacity: 0.90;
+      color: rgba(0,0,0,0.85);
+      font-size: 13px;
+    }
+
+    .scoreBlock{
+      text-align:right;
+      display:flex;
+      flex-direction: column;
+      gap: 6px;
+      align-items:flex-end;
+      min-width: 92px;
+    }
+
+    .scoreBig{
+      font-size: clamp(22px, 5.2vmin, 34px);
+      font-weight: 1100;
+      letter-spacing: 0.02em;
+      color: rgba(0,0,0,0.92);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.35);
+      line-height: 1;
+    }
+
+    .hiLine{
+      font-size: 13px;
+      font-weight: 900;
+      opacity: 0.90;
+      color: rgba(0,0,0,0.85);
+    }
+
+    /* Start-Button bleibt wie vorher (lose, mit Schatten) */
     .startBtn{
       width: 100%;
       border: 1px solid var(--btn-border);
@@ -596,7 +593,7 @@
       filter: brightness(0.97);
     }
 
-    /* ========= DEV Controls (lassen wir fürs Testen da) ========= */
+    /* ========= DEV Controls ========= */
     .controls{
       width: 100%;
       display:flex;
@@ -605,7 +602,7 @@
       padding: 0 6px;
       margin-top: 6px;
       flex-wrap: wrap;
-      opacity: 0.95;
+      opacity: 0.98;
     }
 
     .btn{
@@ -634,12 +631,10 @@
 <body>
   <div class="stage">
 
-    <!-- ===== UI TOP: Titel ===== -->
     <div class="title" aria-label="Titel">
       <h1>DigiKipp</h1>
     </div>
 
-    <!-- ===== Board ===== -->
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
@@ -677,12 +672,12 @@
       <div class="ball" aria-label="Kugel"></div>
     </div>
 
-    <!-- ===== UI PANEL (Attrappen / Dummy) ===== -->
-    <div class="uiPanel" aria-label="UI Panel (noch ohne Logik)">
-      <!-- Slider: Turtle / Hare Piktogramme -->
-      <div class="sliderRow" aria-label="Kippspeed">
+    <!-- ===== UI (lose Elemente) ===== -->
+    <div class="uiLoose" aria-label="UI loose">
+
+      <!-- Regler -->
+      <div class="sliderStrip" aria-label="Kippspeed">
         <div class="icon" aria-hidden="true" title="langsam">
-          <!-- Turtle (Outline) -->
           <svg viewBox="0 0 24 24">
             <path d="M4 14c0 2 2 3 4 3h5c4 0 7-2 7-5 0-3-3-5-7-5H9"/>
             <path d="M9 12h5"/>
@@ -697,7 +692,6 @@
         <input id="speedSlider" type="range" min="0" max="9" value="3" aria-label="Speed Slider">
 
         <div class="icon" aria-hidden="true" title="schnell">
-          <!-- Hare (Outline) -->
           <svg viewBox="0 0 24 24">
             <path d="M6 14c0 3 3 5 7 5 4 0 7-2 7-5 0-2-2-4-5-4H9c-2 0-3 2-3 4Z"/>
             <path d="M9 10V6c0-2 2-3 3-3"/>
@@ -709,28 +703,26 @@
         </div>
       </div>
 
-      <!-- Kippziel -->
-      <div class="uiRow">
-        <div class="uiLabel">Kippziel</div>
-        <div class="targetCard">
-          <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)">7</div>
+      <!-- Info: Kippziel + Score -->
+      <div class="infoRow" aria-label="Kippziel + Score">
+        <div class="kippBlock">
+          <div class="kippHead">
+            <div class="kippLabel">Kippziel</div>
+            <div id="targetSquare" class="targetSquare" aria-label="Ziel (Dummy)">7</div>
+          </div>
+          <div class="subLine">Ziel: <span id="progressVal">0</span> / 11</div>
+        </div>
+
+        <div class="scoreBlock" aria-label="Score Block">
+          <div class="scoreBig"><span id="scoreVal">0</span></div>
+          <div class="hiLine">Highscore: <span id="hiVal">66</span></div>
         </div>
       </div>
 
-      <!-- Punkte / Progress / Highscore -->
-      <div class="scoreBox" aria-label="Punkteblock">
-        <div class="scoreBig">Punkte: <span id="scoreVal">0</span></div>
-        <div class="scoreRight">
-          <div class="mini">Ziel: <span id="progressVal">0</span> / 11</div>
-          <div class="mini">Highscore: <span id="hiVal">66</span></div>
-        </div>
-      </div>
-
-      <!-- Start / Neu setzen -->
       <button id="btnStart" class="startBtn">START</button>
     </div>
 
-    <!-- ===== DEV Controls (für dich weiterhin zum Testen) ===== -->
+    <!-- DEV Controls (vorerst behalten) -->
     <div class="controls">
       <button id="btnMix" class="btn">Würfel mischen (12)</button>
       <button id="btnKip50" class="btn">KIP 50% AN/AUS</button>
@@ -752,16 +744,15 @@
     const btnCW     = document.getElementById("btnCW");
     const btnCCW    = document.getElementById("btnCCW");
 
-    // ===== UI (Dummy, nicht verkabelt) =====
+    // ===== UI (Dummy, noch nicht verkabelt) =====
     const btnStart = document.getElementById("btnStart");
     const speedSlider = document.getElementById("speedSlider");
 
-    // rein optisch: Buttontext toggeln (ohne irgendeine Spiellogik)
     let startedOnce = false;
     btnStart.addEventListener("click", () => {
       startedOnce = true;
       btnStart.textContent = "ZAHLEN NEU SETZEN";
-      // Keine Logik hier. Nur Optik.
+      // absichtlich keine Logik hier (nur UI)
     });
 
     function setBoardSquare(){
@@ -869,7 +860,7 @@
     }
 
     // =========================================================
-    // LOGIK (Bestückung nur in 100%):
+    // LOGIK (Golden)
     // =========================================================
     let planned = [
       [null,null,null,null],
@@ -889,7 +880,6 @@
     let faceIndex = 0;
     const rotDeg = [0, 90, 180, 270];
 
-    // geplante Richtung für Preview
     let plannedDir = +1; // +1 CW, -1 CCW
 
     const slotTargetsW = [
@@ -919,10 +909,6 @@
       assigned[idx] = true;
     }
 
-    // =========================================================
-    // DEIN FELD-ID KERN (CW):
-    // Face ist [F1,F2,F3,F4] in 100%-Logik.
-    // =========================================================
     function mapHiddenToVisible_CW(face){
       const [f1,f2,f3,f4] = face;
       return [f4, f3, f2, f1];
@@ -935,7 +921,6 @@
 
       const curr = sets[faceIndex];
 
-      // 100%
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsW[i], curr[i]);
         if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsW[i], curr[i]);
@@ -948,14 +933,12 @@
 
       const next = sets[nextFaceIndex];
 
-      // rechts: aktuelle Fläche 1:1 (nur skaliert)
       for(let i=0;i<4;i++){
         renderNumber(slotTargetsKipRight[i], curr[i]);
         if(curr[i] !== null && curr[i] !== undefined) setDot(slotTargetsKipRight[i], curr[i]);
         else slotTargetsKipRight[i].classList.remove("dot");
       }
 
-      // links: erst auftauchende Fläche (nur bei CW gemappt)
       const nextForPreview = (plannedDir === +1) ? mapHiddenToVisible_CW(next) : next;
 
       for(let i=0;i<4;i++){
@@ -983,7 +966,7 @@
       faceIndex = 0;
       plannedDir = +1;
 
-      ensureAssigned(0); // W1 bestücken
+      ensureAssigned(0);
       applyRotationAndNumbers();
     }
 
